Fix wrapper height on mobile

--- a/src/assets/style/molecules/_wrapper.sass
+++ b/src/assets/style/molecules/_wrapper.sass
@@ -3,8 +3,10 @@
   margin: 0 10%
 
   +phone
+    height: auto
     margin: 0
 
 .about-wrapper
   opacity: 0
   +translate3d(0, 100px, 0)
+ 
